--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-globe"></i>
-                                <span>Maharashtra, India</span>
+                                <span>Maharastra, India</span>
                             </div>
                         </div>
                         <a href="https://maps.app.goo.gl/AFgAbTTZQHnGfoHJ8" class="btn btn-primary" target="_blank">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="map-preview">
                         <iframe 
-                            src="https://www.google.com/imgres?q=pillai%20college&imgurl=https%3A%2F%2Flookaside.instagram.com%2Fseo%2Fgoogle_widget%2Fcrawler%2F%3Fmedia_id%3D3403071952563659164&imgrefurl=https%3A%2F%2Fwww.instagram.com%2Fpillaiscollege%2Fp%2FC86I-kdpuGc%2F&docid=ob1IU8h6eO5YeM&tbnid=IeXYiXp7m7sZrM&vet=12ahUKEwjossnYy7GMAxU9xDgGHVPzMYYQM3oECBoQAA..i&w=1440&h=1121&hcb=2&ved=2ahUKEwjossnYy7GMAxU9xDgGHVPzMYYQM3oECBoQAA" 
+                            src="https://https://maps.app.goo.gl/AFgAbTTZQHnGfoHJ8" 
                             width="100%" 
                             height="300" 
                             style="border:0;" 
