--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="signup.html" class="btn btn-primary btn-large">Get Started</a>
                 </div>
                 <div class="hero-image">
-                    <img src="/Users/danishraza/WP/portfolio.webp" alt="Portfolio Creator">
+                    <img src="portfolio.webp" alt="Portfolio Creator">
                 </div>
             </section>
             
