--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="map-preview">
                         <iframe 
-                            src="https://maps.app.goo.gl/AFgAbTTZQHnGfoHJ8" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3772.6694339919254!2d73.1276701!3d18.990201000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7e866de88667f%3A0xc1c5d5badc610f5f!2sPillai%20College%20of%20Engineering%2C%20New%20Panvel%20(Autonomous)!5e0!3m2!1sen!2sin!4v1743446574060!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
                             width="100%" 
                             height="300" 
                             style="border:0;" 
