--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </main>
         
         <footer>
-            <p>&copy; 2023 Portfolio Creator. All rights reserved.</p>
+            <p>&copy;  Portfolio Creator. All rights reserved.</p>
         </footer>
     </div>
 
